Fix style on mobile page buttons

--- a/web-client/src/styles/modals.scss
+++ b/web-client/src/styles/modals.scss
@@ -248,6 +248,10 @@
     .button-box-container {
       display: none;
     }
+
+    .usa-button.usa-button--unstyled {
+      width: auto;
+    }
   }
 }
 
